--- a/exmaple/examples.ipynb
+++ b/exmaple/examples.ipynb
@@ -9,9 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "┌ Info: Recompiling stale cache file /home/yangyangli/.julia/compiled/v1.2/Jspot/CFGeR.ji for Jspot [8573a212-7669-4580-92a2-bc18056681b9]\n",
-      "└ @ Base loading.jl:1240\n",
-      "ERROR: LoadError: LoadError: syntax: incomplete: \"function\" at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/config.jl:136 requires end\n",
+      "┌ Info: Precompiling Jspot [8573a212-7669-4580-92a2-bc18056681b9]\n",
+      "└ @ Base loading.jl:1242\n",
+      "ERROR: LoadError: LoadError: syntax: incomplete: \"function\" at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/config.jl:14 requires end\n",
       "Stacktrace:\n",
       " [1] top-level scope at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/config.jl:14\n",
       " [2] include at ./boot.jl:328 [inlined]\n",
