recover origin amax definition

--- a/exmaple/examples.ipynb
+++ b/exmaple/examples.ipynb
@@ -4,49 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Precompiling Jspot [8573a212-7669-4580-92a2-bc18056681b9]\n",
-      "└ @ Base loading.jl:1242\n",
-      "ERROR: LoadError: LoadError: syntax: incomplete: \"function\" at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/config.jl:14 requires end\n",
-      "Stacktrace:\n",
-      " [1] top-level scope at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/config.jl:14\n",
-      " [2] include at ./boot.jl:328 [inlined]\n",
-      " [3] include_relative(::Module, ::String) at ./loading.jl:1094\n",
-      " [4] include at ./Base.jl:31 [inlined]\n",
-      " [5] include(::String) at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/Jspot.jl:3\n",
-      " [6] top-level scope at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/Jspot.jl:11\n",
-      " [7] include at ./boot.jl:328 [inlined]\n",
-      " [8] include_relative(::Module, ::String) at ./loading.jl:1094\n",
-      " [9] include(::Module, ::String) at ./Base.jl:31\n",
-      " [10] top-level scope at none:2\n",
-      " [11] eval at ./boot.jl:330 [inlined]\n",
-      " [12] eval(::Expr) at ./client.jl:432\n",
-      " [13] top-level scope at ./none:3\n",
-      "in expression starting at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/config.jl:14\n",
-      "in expression starting at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/Jspot.jl:11\n"
-     ]
-    },
-    {
-     "ename": "ErrorException",
-     "evalue": "Failed to precompile Jspot [8573a212-7669-4580-92a2-bc18056681b9] to /home/yangyangli/.julia/compiled/v1.2/Jspot/CFGeR.ji.",
-     "output_type": "error",
-     "traceback": [
-      "Failed to precompile Jspot [8573a212-7669-4580-92a2-bc18056681b9] to /home/yangyangli/.julia/compiled/v1.2/Jspot/CFGeR.ji.",
-      "",
-      "Stacktrace:",
-      " [1] error(::String) at ./error.jl:33",
-      " [2] compilecache(::Base.PkgId, ::String) at ./loading.jl:1253",
-      " [3] _require(::Base.PkgId) at ./loading.jl:1013",
-      " [4] require(::Base.PkgId) at ./loading.jl:911",
-      " [5] require(::Module, ::Symbol) at ./loading.jl:906",
-      " [6] top-level scope at In[1]:1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Jspot"
    ]
@@ -70,23 +28,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: conf_spotmodel not defined",
+     "ename": "TypeError",
+     "evalue": "TypeError: non-boolean (Float64) used in boolean context",
      "output_type": "error",
      "traceback": [
-      "UndefVarError: conf_spotmodel not defined",
+      "TypeError: non-boolean (Float64) used in boolean context",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[2]:1"
+      " [1] conf_spotmodel(::String) at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/config.jl:42",
+      " [2] top-level scope at In[4]:1"
      ]
     }
    ],
    "source": [
-    "structs = conf_spotmodel(\"../Jspot/test/samples/onespot_noevo_nofac_noconv.ini\")"
+    "structs = conf_spotmodel(\"../test/samples/onespot_noevo_nofac_noconv.ini\")"
    ]
   },
   {
