--- a/exmaple/examples.ipynb
+++ b/exmaple/examples.ipynb
@@ -4,7 +4,37 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Recompiling stale cache file /home/yangyangli/.julia/compiled/v1.2/Jspot/CFGeR.ji for Jspot [8573a212-7669-4580-92a2-bc18056681b9]\n",
+      "└ @ Base loading.jl:1240\n",
+      "WARNING: Method definition (::Type{Jspot.Diagram})(Float64, Float64, Float64) in module Jspot at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:4 overwritten at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:4.\n",
+      "  ** incremental compilation may be fatally broken for this module **\n",
+      "\n",
+      "WARNING: Method definition (::Type{Jspot.Diagram})(Any, Any, Any) in module Jspot at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:4 overwritten at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:4.\n",
+      "  ** incremental compilation may be fatally broken for this module **\n",
+      "\n",
+      "WARNING: Method definition (::Type{Jspot.Differential})(Float64, Float64) in module Jspot at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:10 overwritten at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:10.\n",
+      "  ** incremental compilation may be fatally broken for this module **\n",
+      "\n",
+      "WARNING: Method definition (::Type{Jspot.Differential})(Any, Any) in module Jspot at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:10 overwritten at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:10.\n",
+      "  ** incremental compilation may be fatally broken for this module **\n",
+      "\n",
+      "WARNING: Method definition sample_lat(Jspot.Diagram, Float64) in module Jspot at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:15 overwritten at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:15.\n",
+      "  ** incremental compilation may be fatally broken for this module **\n",
+      "\n",
+      "WARNING: Method definition sample_lifetime() in module Jspot at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:28 overwritten at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:28.\n",
+      "  ** incremental compilation may be fatally broken for this module **\n",
+      "\n",
+      "WARNING: Method definition sample_phase(Float64) in module Jspot at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:35 overwritten at /media/yangyangli/OS/yangyangli_private/Code/Jspot/Jspot/src/evolution.jl:35.\n",
+      "  ** incremental compilation may be fatally broken for this module **\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "using Jspot"
    ]
@@ -28,16 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Jspot.RotationSpot(1, 1.0, Number[25.05], Number[0.6], Number[0.0], 0.0, Number[0.0], [0.01], [1.0], [0.0], Number[1.254858718238314], Number[1.5707963267948966], Number[0.0], Number[10.0])"
+       "Jspot.RotationSpot(1, 1.0, Number[25.05], Number[0.6], Number[0.0], 200.0, Number[0.0], [0.01], [1.0], [0.0], Number[1.3714719349049123], Number[1.5707963267948966], Number[0.0], Number[10.0])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +113,7 @@
        " 2505.0"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,27 +126,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([-0.002292767653871669 -0.0022354199958695875 … -0.002350529419003307 -0.002292767653871698], [-4.497028949934462 -4.3934661682061416 … -4.600762694429851 -4.497028949934509], [-1.3972620153538993 -1.3388188097466456 … -1.4569411864568576 -1.3972620153539406])"
+       "([-0.0013014258463451879 -0.0012526840244876814 … -0.0013506715821347776 -0.001301425846345189], [-3.1477439173781026 -3.0175788642488004 … -3.279958890882114 -3.1477439173781057], [-0.6232757849369758 -0.5789058925670427 … -0.6696428930305898 -0.6232757849369771])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dF, dRV, BIS = simulation(structs;nper=10, comb=true)"
+    "dF, dRV, BIS = simulation(structs;nper=1, comb=true)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,55 +155,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10001-element Array{Float64,1}:\n",
-       "   0.0    \n",
-       "   0.02505\n",
-       "   0.0501 \n",
-       "   0.07515\n",
-       "   0.1002 \n",
-       "   0.12525\n",
-       "   0.1503 \n",
-       "   0.17535\n",
-       "   0.2004 \n",
-       "   0.22545\n",
-       "   0.2505 \n",
-       "   0.27555\n",
-       "   0.3006 \n",
-       "   ⋮      \n",
-       " 250.22445\n",
-       " 250.2495 \n",
-       " 250.27455\n",
-       " 250.2996 \n",
-       " 250.32465\n",
-       " 250.3497 \n",
-       " 250.37475\n",
-       " 250.3998 \n",
-       " 250.42485\n",
-       " 250.4499 \n",
-       " 250.47495\n",
-       " 250.5    "
+       "1001-element Array{Float64,1}:\n",
+       "  0.0    \n",
+       "  0.02505\n",
+       "  0.0501 \n",
+       "  0.07515\n",
+       "  0.1002 \n",
+       "  0.12525\n",
+       "  0.1503 \n",
+       "  0.17535\n",
+       "  0.2004 \n",
+       "  0.22545\n",
+       "  0.2505 \n",
+       "  0.27555\n",
+       "  0.3006 \n",
+       "  ⋮      \n",
+       " 24.77445\n",
+       " 24.7995 \n",
+       " 24.82455\n",
+       " 24.8496 \n",
+       " 24.87465\n",
+       " 24.8997 \n",
+       " 24.92475\n",
+       " 24.9498 \n",
+       " 24.97485\n",
+       " 24.9999 \n",
+       " 25.02495\n",
+       " 25.05   "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tmin = 0.0\n",
-    "tmax = 25.05 * 10\n",
+    "tmax = 25.05 * 1\n",
     "t = Array(tmin:25.05/1000:tmax)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -181,11 +211,11 @@
      "output_type": "stream",
      "text": [
       "┌ Warning: `getindex(o::PyObject, s::Symbol)` is deprecated in favor of dot overloading (`getproperty`) so elements should now be accessed as e.g. `o.s` instead of `o[:s]`.\n",
-      "│   caller = top-level scope at In[73]:2\n",
-      "└ @ Core In[73]:2\n",
+      "│   caller = top-level scope at In[24]:3\n",
+      "└ @ Core In[24]:3\n",
       "┌ Warning: `getindex(o::PyObject, s::Symbol)` is deprecated in favor of dot overloading (`getproperty`) so elements should now be accessed as e.g. `o.s` instead of `o[:s]`.\n",
-      "│   caller = top-level scope at In[73]:4\n",
-      "└ @ Core In[73]:4\n"
+      "│   caller = top-level scope at In[24]:5\n",
+      "└ @ Core In[24]:5\n"
      ]
     },
     {
@@ -194,12 +224,13 @@
        "PyObject Text(0.5, 23.52222222222222, 'time')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "pygui(true)\n",
     "fig, ax = subplots(2,1, sharex = true)\n",
     "ax[1,1][:plot](t, transpose(dF))\n",
     "ax[1,1].set_ylabel(\"dF\")\n",
