modify the distribution of spots lifetime for non-solar scenario

--- a/exmaple/examples.ipynb
+++ b/exmaple/examples.ipynb
@@ -146,15 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "┌ Info: Precompiling PyPlot [d330b81b-6aea-500a-939a-2ce795aea3ee]\n",
-      "└ @ Base loading.jl:1242\n"
+      "┌ Info: Recompiling stale cache file /home/yangyangli/.julia/compiled/v1.2/PyPlot/oatAj.ji for PyPlot [d330b81b-6aea-500a-939a-2ce795aea3ee]\n",
+      "└ @ Base loading.jl:1240\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        " 250.5    "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,18 +694,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2-element Array{Any,1}:\n",
-       " Jspot.RotationSpot(150, 1.0, Number[25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05  …  25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05], Number[0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6  …  0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6], Number[0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2  …  0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2], 300.0, Number[5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0  …  5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0], [6.929962937670019e-5, 0.0005949956674248592, 0.00018608527052865065, 0.005302881550206771, 9.48873739515198e-5, 0.003463376418959703, 0.00012800926539025857, 0.0008536201742616843, 0.00010509007072994307, 0.000280605841241996  …  0.00019013423615714433, 0.0006972191144463208, 0.002087376401566128, 0.00038241982708035906, 0.00030710045611932117, 9.094347452117523e-5, 0.00015806732862553433, 0.00011754144574013353, 2.38080525220317e-5, 0.0008978528986259278], [0.2309987645890006, 1.983318891416197, 0.620284235095502, 17.676271834022568, 0.399591246505066, 11.961088063199009, 0.9264975513008618, 3.5118005808722805, 1.266600235766477, 2.184852804139987  …  7514.793580791668, 7516.7337637192995, 7521.367621343033, 7515.934332761413, 7515.683268191544, 7515.04604491955, 7515.436391099898, 7515.384604823614, 7515.072160179554, 7517.9856429999], [0.6929962937670018, 5.949956674248591, 1.8608527052865063, 53.02881550206771, 0.948873739515198, 34.63376418959703, 1.2800926539025856, 8.536201742616843, 1.0509007072994307, 2.8060584124199597  …  1.9013423615714433, 6.972191144463208, 20.87376401566128, 3.82419827080359, 3.0710045611932113, 0.9094347452117523, 1.5806732862553432, 1.1754144574013352, 0.23808052522031697, 8.978528986259278], Number[0.2672348334257973, 4.846475168149695, 4.597759159136283, 5.077886872828697, 4.30113077489066, 1.5989237962126468, 1.5371201785940372, 3.0878566336572324, 4.579285171220526, 4.4785568860176115  …  0.31859829356009967, 5.0524963518216985, 0.08200805383319142, 0.14475218120067854, 4.741152760625747, -0.5530376035540316, 1.698320848484051, 4.35854231963209, 5.1824301772774355, 4.429739034372476], Number[1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966  …  1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966], Number[0.38543986913590117, -0.35118643484796774, -0.37799381705432317, -0.42762687897048796, -0.357610819850623, -0.2136366477604669, -0.317975187677264, 0.334264094753528, -0.28387505944696984, -0.29099783565462156  …  0.43207311284725763, -0.414876093181521, 0.47350194283340974, 0.4821524157469577, -0.3946269727241514, 0.45131099151040305, -0.4943576676082954, -0.48492640016239486, -0.4862334998809192, -0.42824404486988], Number[20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0  …  20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0])\n",
-       " Jspot.Differential(0.25082576076565216, 0.185)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       "
+       " Jspot.RotationSpot(150, 1.0, Number[25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05  …  25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05, 25.05], Number[0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6  …  0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6, 0.6], Number[0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2  …  0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2], 300.0, Number[5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0  …  5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0], [7.603889417912921e-5, 0.00024782259306875445, 0.0008924278935091188, 0.0005655450899706107, 0.00011544267131740588, 0.00019427168073838497, 7.97958789581972e-5, 0.0037368939358916535, 0.00010720840526422202, 0.00012292972373138139  …  0.0005926698748333081, 1.719562135335362e-5, 0.0006726880716594198, 0.0008861653349520354, 7.713722736989105e-5, 0.0001306586235588413, 0.00018570826362495238, 0.000919461570574623, 0.00012028592077596015, 0.0008160688660549031], [0.2534629805970974, 0.8260753102291815, 2.974759645030396, 1.8851502999020353, 0.38480890439135285, 0.6475722691279499, 0.26598626319399066, 12.456313119638844, 0.44066135088074004, 0.8262657457712712  …  251.54236624945278, 249.70741873785295, 251.8923935722065, 252.77058444984857, 250.15712409124143, 250.4188287452046, 250.68562754542498, 253.2980719019239, 250.7174530692617, 253.12002955352483], [0.7603889417912921, 2.4782259306875445, 8.924278935091188, 5.655450899706106, 1.1544267131740586, 1.9427168073838497, 0.797958789581972, 37.368939358916535, 1.0720840526422202, 1.2292972373138138  …  5.926698748333081, 0.17195621353353618, 6.726880716594198, 8.861653349520353, 0.7713722736989105, 1.306586235588413, 1.8570826362495236, 9.19461570574623, 1.2028592077596014, 8.160688660549031], Number[1.364858847338576, 4.401130165774725, 3.1948244531207246, 1.5049194812477031, -0.1061937338368032, 2.9932098044771513, 4.403028856789585, -0.246047438803097, 1.790661965235239, 1.7696113525090442  …  4.805452180750041, 0.3714216454889855, 1.4377451090209428, -0.19813578025228307, 3.3277089437127443, 2.844886944458111, 0.007860864150546721, 1.9210696815793857, 1.5987796264263257, 1.1700311003359283], Number[1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966  …  1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966, 1.5707963267948966], Number[-0.009654001635585434, -0.10190162937762412, 0.04239493384794698, -0.010904815782493608, 0.014359279509640818, 0.005420745273637247, -0.06378631712674751, 0.025922537620118962, -0.14733515630731658, -0.05959636796642289  …  -0.4481240319303281, 0.4018327725747803, -0.49171764386614214, 0.4985738355742467, 0.468837977186038, 0.5706401647285954, 0.4389286731848182, -0.4231848500779236, -0.47059998757674243, -0.4941762074999933], Number[20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0  …  20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0, 20.0])\n",
+       " Jspot.Differential(0.25082576076565216, 0.185)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,16 +716,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0.0 7.699130204018909e-5 … 0.001996481444992328 0.0015030147926863673], [0.0 0.476246117528855 … 8.01917634916017 5.8662733905232205], [0.0 0.41717204318019346 … 5.415326293112806 5.024121379320079])"
+       "([1.1118758065257048e-18 0.00017089686437323903 … 0.7892229941504637 0.7923820177809067], [9.152600855482359e-15 0.07608559780370278 … 2831.9302958565963 2831.5708615404137], [8.876949503676591e-15 0.21858091478902664 … 2036.6090857627714 2032.8638349028631])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -746,11 +746,11 @@
      "output_type": "stream",
      "text": [
       "┌ Warning: `getindex(o::PyObject, s::Symbol)` is deprecated in favor of dot overloading (`getproperty`) so elements should now be accessed as e.g. `o.s` instead of `o[:s]`.\n",
-      "│   caller = top-level scope at In[37]:3\n",
-      "└ @ Core In[37]:3\n",
+      "│   caller = top-level scope at In[10]:3\n",
+      "└ @ Core In[10]:3\n",
       "┌ Warning: `getindex(o::PyObject, s::Symbol)` is deprecated in favor of dot overloading (`getproperty`) so elements should now be accessed as e.g. `o.s` instead of `o[:s]`.\n",
-      "│   caller = top-level scope at In[37]:5\n",
-      "└ @ Core In[37]:5\n"
+      "│   caller = top-level scope at In[10]:5\n",
+      "└ @ Core In[10]:5\n"
      ]
     },
     {
@@ -759,7 +759,7 @@
        "PyObject Text(0.5, 23.52222222222222, 'time')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
